--- a/scss/imports/pages/_home.scss
+++ b/scss/imports/pages/_home.scss
@@ -9,6 +9,43 @@
         width: 100%;
         height: 100%;
         z-index: 100;
+        // pointer-events: none;
+        .btn__ctrl-slider{
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+            display: flex;
+            .btn__prev{
+                width: 50px;
+                height: 50px;
+                background-color: rgb(61, 59, 59);
+                display: flex;
+                border-right: 1px solid #ccc;
+                cursor: pointer;
+                &:hover{
+                    background-color: rgb(131, 127, 127);
+                }
+                i{
+                    color: #fff;
+                    margin: auto;
+                    transform: rotate(180deg);
+                }
+            }
+            .btn__next{
+                width: 50px;
+                height: 50px;
+                background-color: rgb(61, 59, 59);
+                display: flex;
+                cursor: pointer;
+                &:hover{
+                    background-color: rgb(131, 127, 127);
+                }
+                i{
+                    color: #fff;
+                    margin: auto;
+                }
+            }
+        }
         .header__slider{
             position: absolute;
             top: 40px;
@@ -37,6 +74,7 @@
             justify-content: center;
             align-items: center;
             z-index: -1;
+            // pointer-events: all !important;
             i{
                 margin-bottom: 15px;
                 pointer-events: none;
@@ -293,9 +331,12 @@
         width: 100%;
         height: 100%;
         img{
-            width: 100%;
+            width: 100vw;
             height: 100%;
             object-fit: cover;
+        }
+        .carousel-cell{
+            height: 100%;
         }
     }
 }
@@ -740,6 +781,12 @@
     .content__homepage .container .three__content {
         display: grid;
         grid-template-columns: 1fr;
+    }
+    .main__slider .slider__fixed .caption__slider {
+        display: none;
+    }
+    .main__slider .slider__fixed .mouse__bottom {
+        display: none;
     }
 }
 
