--- a/scss/imports/pages/_productchild.scss
+++ b/scss/imports/pages/_productchild.scss
@@ -2,10 +2,15 @@
     .bg__top{
         height: 450px;
         width: 100%;
-        background-image: url("../../../img/bg__product-detail.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
+        >img{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
         &::after{
             content: "";
             width: 100%;
