--- a/scss/imports/pages/_home.scss
+++ b/scss/imports/pages/_home.scss
@@ -788,6 +788,9 @@
     .main__slider .slider__fixed .mouse__bottom {
         display: none;
     }
+    .content__homepage {
+        margin-top: 95px;
+    }
 }
 
 footer{
