--- a/scss/imports/core/_footer.scss
+++ b/scss/imports/core/_footer.scss
@@ -1,126 +1,197 @@
 // css footer
 
-footer{
-    .footer__homepage{
-        height: 900px;
-        width: 100%;
-        background-color: #132539;
-        .container{
-            .logo__footer{
-                display: flex;
-                justify-content: space-between;
-                padding-top: 500px;
-                &::before{
-                    content: "";
-                    display: inline-block;
-                    height: 1px;
-                    width: 100%;
-                    background-color: #d4a549;
-                    margin-top: 50px;
-                    margin-right: 40px;
-                }
-                &::after{
-                    content: "";
-                    display: inline-block;
-                    height: 1px;
-                    width: 100%;
-                    background-color: #d4a549;
-                    margin-top: 50px;
-                    margin-left: 40px;
-                }
-            }
-            .text__footer{
-                .text__footer-contact{
-                    display: flex;
-                    justify-content: center;
-                   .text{
-                       text-align: center;
-                       margin-top: 50px;
-                        p{
-                            font-family: Arial, Helvetica, sans-serif;
-                            font-size: 11px;
-                            line-height: 26px;
-                            text-transform: uppercase;
-                            color: #fff;
-                        }
-                   }
-                }
-            }
-            .backtotop{
-                display: flex;
-                transform: rotate(90deg);
-                position: absolute;
-                right: 100px;
-                bottom: 150px;
-                flex-direction: row-reverse;
-                cursor: pointer;
-                &::after{
-                    content: "";
-                    display: block;
-                    width: 130px;
-                    height: 1px;
-                    background-color: #d4a549;
-                    margin: auto 24px;
-                }
-
-                span{
-                    font-family: Arial, Helvetica, sans-serif;
-                    font-size: 11px;
-                    line-height: 26px;
-                    color: #fff;
-                    text-transform: uppercase;
-                    &:hover{
-                        opacity: 0.6;
-                    }
-                }
-            }
+footer {
+  .footer__homepage {
+    height: 900px;
+    width: 100%;
+    background-color: #132539;
+    .container {
+      .logo__footer {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 500px;
+        &::before {
+          content: "";
+          display: inline-block;
+          height: 1px;
+          width: 100%;
+          background-color: #d4a549;
+          margin-top: 50px;
+          margin-right: 40px;
         }
+        &::after {
+          content: "";
+          display: inline-block;
+          height: 1px;
+          width: 100%;
+          background-color: #d4a549;
+          margin-top: 50px;
+          margin-left: 40px;
+        }
+      }
+      .text__footer {
+        .text__footer-contact {
+          display: flex;
+          justify-content: center;
+          .text {
+            text-align: center;
+            margin-top: 50px;
+            p {
+              font-family: Arial, Helvetica, sans-serif;
+              font-size: 11px;
+              line-height: 26px;
+              text-transform: uppercase;
+              color: #fff;
+            }
+          }
+        }
+      }
+      .backtotop {
+        display: flex;
+        transform: rotate(90deg);
+        position: absolute;
+        right: 100px;
+        bottom: 150px;
+        flex-direction: row-reverse;
+        cursor: pointer;
+        &::after {
+          content: "";
+          display: block;
+          width: 130px;
+          height: 1px;
+          background-color: #d4a549;
+          margin: auto 24px;
+        }
+
+        span {
+          font-family: Arial, Helvetica, sans-serif;
+          font-size: 11px;
+          line-height: 26px;
+          color: #fff;
+          text-transform: uppercase;
+          &:hover {
+            opacity: 0.6;
+          }
+        }
+      }
     }
+  }
 }
-@media screen and(max-width: 1285px) {
-    footer .--margin 
-    .container .backtotop {
-        right: 0;
+footer {
+  .--margin {
+    margin-top: -385px;
+  }
+}
+
+footer {
+  .--footer400 {
+    height: 480px;
+    .container {
+      .logo__footer {
+        padding-top: 75px;
+      }
     }
+  }
+}
+
+.text__footer {
+  .email {
+    display: flex;
+    justify-content: center;
+    a {
+      margin-left: 5px;
+      color: #fff;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+@media screen and(max-width: 1285px) {
+  footer .footer__homepage .container .backtotop {
+    right: 0;
+  }
 }
 
 @media screen and(max-width: 1246px) {
-    footer .--margin .container .backtotop {
-        right: -37px;
-        bottom: 150px;
-    }
+  footer .--margin .container .backtotop {
+    right: -37px;
+    bottom: 150px;
+  }
 }
 
 @media screen and(max-width: 1171px) {
-    footer .--margin .container .backtotop {
-        right: -7px;
-        bottom: 150px;
-    }
+  footer .footer__homepage .container .backtotop {
+    right: -7px;
+    bottom: 150px;
+  }
+}
+
+@media screen and(max-width: 1025px) {
+  footer .footer__homepage .container .backtotop {
+    right: -75px;
+  }
 }
 
 @media screen and(max-width: 993px) {
-    footer .--margin {
-        margin-top: -270px;
-    }
-    footer .--margin .container .backtotop {
-        bottom: 216px;
-    }
-    footer .--margin .container .logo__footer {
-        padding-top: 430px;
-    }
+  footer .--margin {
+    margin-top: -270px;
+  }
+  footer .footer__homepage.container .backtotop {
+    bottom: 216px;
+  }
+  footer .--margin .container .logo__footer {
+    padding-top: 430px;
+  }
+}
+
+@media screen and(max-width: 820px) {
+  footer .footer__homepage .container .backtotop {
+    right: -55px;
+  }
 }
 
 @media screen and(max-width: 767px) {
-    footer .--margin .container .backtotop {
-        right: -4px;
-        bottom: 190px;
-    }
+  footer .footer__homepage .container .backtotop {
+    right: -4px;
+    bottom: 190px;
+  }
 }
 
 @media screen and(max-width: 576px) {
-    footer .--product_footer .container 
-    .backtotop__product {
-        right: -110px !important;
-        bottom: 140px !important;
-    }
+  footer .footer__homepage .container .backtotop {
+    right: -105px;
+    bottom: 160px;
+  }
+}
+
+@media screen and(max-width: 420px) {
+  footer .footer__homepage .container .backtotop {
+    right: -97px;
+    bottom: 125px;
+  }
+  footer .footer__homepage .container .backtotop::after {
+    width: 110px;
+  }
+}
+
+@media screen and(max-width: 394px) {
+  footer .footer__homepage .container .backtotop {
+    right: -97px;
+    bottom: 125px;
+  }
+  footer .footer__homepage .container .backtotop::after {
+    width: 110px;
+  }
+}
+
+@media screen and(max-width: 376px) {
+  footer .footer__homepage .container .backtotop {
+    right: -84px;
+    bottom: 110px;
+  }
+  footer .footer__homepage .container .backtotop::after {
+    width: 84px;
+  }
 }
