update tag a logo

--- a/scss/imports/core/_footer.scss
+++ b/scss/imports/core/_footer.scss
@@ -50,7 +50,7 @@ footer {
         display: flex;
         transform: rotate(90deg);
         position: absolute;
-        right: 100px;
+        right: 0;
         bottom: 150px;
         flex-direction: row-reverse;
         cursor: pointer;
